tulip-cli-dev: reverted changes for TULIP_JAVA_OPTIONS