@@ -27,6 +27,7 @@ public class TulipCli {
             String.valueOf(io.github.wfouche.tulip.api.TulipApi.NUM_ACTIONS - 1).toString();
     static String lang = "Java";
     static String url = "http://jsonplaceholder.typicode.com";
+    static String TULIP_JAVA_OPTIONS = "-Xmx2g -XX:+UseZGC -XX:+ZGenerational";
     static String avgAPS = "10.0";
     static String tulipVersion = io.github.wfouche.tulip.api.TulipApi.VERSION;
     static String httpVersion = "HTTP_1_1";
@@ -375,7 +376,7 @@ public class TulipCli {
             #!/bin/bash
             rm -f benchmark_report.html
             export     JBANG_JAVA_OPTIONS=-XX:TieredStopAtLevel=1
-            #xport JBANG_APP_JAVA_OPTIONS=""
+            export JBANG_APP_JAVA_OPTIONS="__TULIP_JAVA_OPTIONS__"
             jbang run io/tulip/App.java
             echo ""
             #w3m -dump -cols 205 benchmark_report.html
@@ -390,7 +391,7 @@ public class TulipCli {
             chcp 65001 > nul
             if exist benchmark_report.html del benchmark_report.html
             set     JBANG_JAVA_OPTIONS=-XX:TieredStopAtLevel=1
-            REM JBANG_APP_JAVA_OPTIONS=
+            set JBANG_APP_JAVA_OPTIONS=__TULIP_JAVA_OPTIONS__
             call jbang run io\\tulip\\App.java
             @echo off
             echo.
@@ -541,7 +542,8 @@ public class TulipCli {
         writeToFile(
                 path + "App.java",
                 javaApp.replace("__TULIP_VERSION__", tulipVersion)
-                        .replace("__TULIP_JAVA_VERSION__", javaVersion),
+                        .replace("__TULIP_JAVA_VERSION__", javaVersion)
+                        .replace("__TULIP_JAVA_OPTIONS__", TULIP_JAVA_OPTIONS),
                 false);
 
         writeToFile(path + "JavaHttpUser.java", javaUser, false);
@@ -549,13 +551,15 @@ public class TulipCli {
         writeToFile(
                 "run_bench.sh",
                 runBenchShJava
-                        .replace("__TULIP_VERSION__", tulipVersion),
+                        .replace("__TULIP_VERSION__", tulipVersion)
+                        .replace("__TULIP_JAVA_OPTIONS__", TULIP_JAVA_OPTIONS),
                 false);
 
         writeToFile(
                 "run_bench.cmd",
                 runBenchCmdJava
-                        .replace("__TULIP_VERSION__", tulipVersion),
+                        .replace("__TULIP_VERSION__", tulipVersion)
+                        .replace("__TULIP_JAVA_OPTIONS__", TULIP_JAVA_OPTIONS),
                 false);
 
         writeToFile(".sdkmanrc", sdkmanConfig, false);
@@ -656,7 +660,7 @@ public class TulipCli {
             #!/bin/bash
             rm -f benchmark_report.html
             export     JBANG_JAVA_OPTIONS=-XX:TieredStopAtLevel=1
-            #xport JBANG_APP_JAVA_OPTIONS=""
+            export JBANG_APP_JAVA_OPTIONS="__TULIP_JAVA_OPTIONS__"
             jbang run io/tulip/App.kt
             echo ""
             #w3m -dump -cols 205 benchmark_report.html
@@ -671,7 +675,7 @@ public class TulipCli {
             chcp 65001 > nul
             if exist benchmark_report.html del benchmark_report.html
             set     JBANG_JAVA_OPTIONS=-XX:TieredStopAtLevel=1
-            REM JBANG_APP_JAVA_OPTIONS=
+            set JBANG_APP_JAVA_OPTIONS=__TULIP_JAVA_OPTIONS__
             call jbang run io\\tulip\\App.kt
             @echo off
             echo.
@@ -700,7 +704,8 @@ public class TulipCli {
                 path + "App.kt",
                 kotlinApp
                         .replace("__TULIP_VERSION__", tulipVersion)
-                        .replace("__TULIP_JAVA_VERSION__", javaVersion),
+                        .replace("__TULIP_JAVA_VERSION__", javaVersion)
+                        .replace("__TULIP_JAVA_OPTIONS__", TULIP_JAVA_OPTIONS),
                 false);
 
         writeToFile(path + "KotlinHttpUser.kt", kotlinUser, false);
@@ -708,13 +713,15 @@ public class TulipCli {
         writeToFile(
                 "run_bench.sh",
                 runBenchShKotlin
-                        .replace("__TULIP_VERSION__", tulipVersion),
+                        .replace("__TULIP_VERSION__", tulipVersion)
+                        .replace("__TULIP_JAVA_OPTIONS__", TULIP_JAVA_OPTIONS),
                 false);
 
         writeToFile(
                 "run_bench.cmd",
                 runBenchCmdKotlin
-                        .replace("__TULIP_VERSION__", tulipVersion),
+                        .replace("__TULIP_VERSION__", tulipVersion)
+                        .replace("__TULIP_JAVA_OPTIONS__", TULIP_JAVA_OPTIONS),
                 false);
 
         writeToFile(".sdkmanrc", sdkmanConfig, false);
@@ -812,7 +819,7 @@ public class TulipCli {
             # export JAVA_OPTS="__TULIP_JAVA_OPTIONS__"
             # groovy io/tulip/App.groovy
             export     JBANG_JAVA_OPTIONS=-XX:TieredStopAtLevel=1
-            #xport JBANG_APP_JAVA_OPTIONS=""
+            export JBANG_APP_JAVA_OPTIONS="__TULIP_JAVA_OPTIONS__"
             jbang run io/tulip/App.groovy
             echo ""
             #w3m -dump -cols 205 benchmark_report.html
@@ -830,7 +837,7 @@ public class TulipCli {
             REM Try running the benchmark on Linux or macOS
             REM
             if exist benchmark_report.html del benchmark_report.html
-            set JAVA_OPTS=
+            set JAVA_OPTS=__TULIP_JAVA_OPTIONS__
             call groovy io\\tulip\\App.groovy
             @echo off
             echo.
@@ -859,7 +866,8 @@ public class TulipCli {
                 path + "App.groovy",
                 groovyApp
                         .replace("__TULIP_VERSION__", tulipVersion)
-                        .replace("__TULIP_JAVA_VERSION__", javaVersion),
+                        .replace("__TULIP_JAVA_VERSION__", javaVersion)
+                        .replace("__TULIP_JAVA_OPTIONS__", TULIP_JAVA_OPTIONS),
                 false);
 
         writeToFile(path + "GroovyHttpUser.groovy", groovyUser, false);
@@ -867,13 +875,15 @@ public class TulipCli {
         writeToFile(
                 "run_bench.sh",
                 runBenchShGroovy
-                        .replace("__TULIP_VERSION__", tulipVersion),
+                        .replace("__TULIP_VERSION__", tulipVersion)
+                        .replace("__TULIP_JAVA_OPTIONS__", TULIP_JAVA_OPTIONS),
                 false);
 
         writeToFile(
                 "run_bench.cmd",
                 runBenchCmdGroovy
-                        .replace("__TULIP_VERSION__", tulipVersion),
+                        .replace("__TULIP_VERSION__", tulipVersion)
+                        .replace("__TULIP_JAVA_OPTIONS__", TULIP_JAVA_OPTIONS),
                 false);
 
         writeToFile(".sdkmanrc", sdkmanConfig, false);
@@ -892,6 +902,7 @@ public class TulipCli {
             //> using dep io.github.wfouche.tulip:tulip-runtime:__TULIP_VERSION__
             //> using dep org.springframework.boot:spring-boot-starter-restclient:4.0.2
             //> using dep org.slf4j:slf4j-api:2.0.17
+            //> using javaOpt __TULIP_JAVA_OPTIONS__
             //> using javaOpt -XX:+IgnoreUnrecognizedVMOptions
             //> using javaOpt --enable-native-access=ALL-UNNAMED
             //> using javaOpt --sun-misc-unsafe-memory-access=allow
@@ -1003,7 +1014,8 @@ public class TulipCli {
         writeToFile(
                 path + "App.scala",
                 scalaApp.replace("__TULIP_VERSION__", tulipVersion)
-                        .replace("__TULIP_JAVA_VERSION__", javaVersion),
+                        .replace("__TULIP_JAVA_VERSION__", javaVersion)
+                        .replace("__TULIP_JAVA_OPTIONS__", TULIP_JAVA_OPTIONS),
                 false);
 
         writeToFile(path + "ScalaHttpUser.scala", scalaUser, false);
@@ -1011,13 +1023,15 @@ public class TulipCli {
         writeToFile(
                 "run_bench.sh",
                 runBenchShScala
-                        .replace("__TULIP_VERSION__", tulipVersion),
+                        .replace("__TULIP_VERSION__", tulipVersion)
+                        .replace("__TULIP_JAVA_OPTIONS__", TULIP_JAVA_OPTIONS),
                 false);
 
         writeToFile(
                 "run_bench.cmd",
                 runBenchCmdScala
-                        .replace("__TULIP_VERSION__", tulipVersion),
+                        .replace("__TULIP_VERSION__", tulipVersion)
+                        .replace("__TULIP_JAVA_OPTIONS__", TULIP_JAVA_OPTIONS),
                 false);
 
         writeToFile(".sdkmanrc", sdkmanConfig, false);
@@ -1039,6 +1053,7 @@ public class TulipCli {
             //DEPS org.springframework.boot:spring-boot-starter-restclient:4.0.2
             //DEPS org.slf4j:slf4j-api:2.0.17
             //JAVA __TULIP_JAVA_VERSION__
+            //RUNTIME_OPTIONS __TULIP_JAVA_OPTIONS__
             //RUNTIME_OPTIONS -XX:+IgnoreUnrecognizedVMOptions
             //RUNTIME_OPTIONS --enable-native-access=ALL-UNNAMED
             //RUNTIME_OPTIONS --sun-misc-unsafe-memory-access=allow
@@ -1111,7 +1126,6 @@ public class TulipCli {
             #!/bin/bash
             rm -f benchmark_report.html
             export JBANG_JAVA_OPTIONS=-XX:TieredStopAtLevel=1
-            export JBANG_APP_JAVA_OPTIONS=
             jbang run Jython.java benchmark.py
             #jbang run jython-cli@jython benchmark.py
             echo ""
@@ -1126,7 +1140,6 @@ public class TulipCli {
             chcp 65001 > nul
             if exist benchmark_report.html del benchmark_report.html
             set JBANG_JAVA_OPTIONS=-XX:TieredStopAtLevel=1
-            set JBANG_APP_JAVA_OPTIONS=
             call jbang run Jython.java benchmark.py
             REM call jbang run jython-cli@jython benchmark.py
             @echo off
@@ -1154,25 +1167,29 @@ public class TulipCli {
         writeToFile(
                 "Jython.java",
                 JythonJava.replace("__TULIP_VERSION__", tulipVersion)
-                        .replace("__TULIP_JAVA_VERSION__", javaVersion),
+                        .replace("__TULIP_JAVA_VERSION__", javaVersion)
+                        .replace("__TULIP_JAVA_OPTIONS__", TULIP_JAVA_OPTIONS),
                 false);
 
         writeToFile(
                 "benchmark.py",
                 JythonBenchmark.replace("__TULIP_VERSION__", tulipVersion)
-                        .replace("__TULIP_JAVA_VERSION__", javaVersion),
+                        .replace("__TULIP_JAVA_VERSION__", javaVersion)
+                        .replace("__TULIP_JAVA_OPTIONS__", TULIP_JAVA_OPTIONS),
                 false);
 
         writeToFile(
                 "run_bench.sh",
                 runBenchShJython
-                        .replace("__TULIP_VERSION__", tulipVersion),
+                        .replace("__TULIP_VERSION__", tulipVersion)
+                        .replace("__TULIP_JAVA_OPTIONS__", TULIP_JAVA_OPTIONS),
                 false);
 
         writeToFile(
                 "run_bench.cmd",
                 runBenchCmdJython
-                        .replace("__TULIP_VERSION__", tulipVersion),
+                        .replace("__TULIP_VERSION__", tulipVersion)
+                        .replace("__TULIP_JAVA_OPTIONS__", TULIP_JAVA_OPTIONS),
                 false);
 
         writeToFile(".sdkmanrc", sdkmanConfig, false);
@@ -1187,6 +1204,10 @@ public class TulipCli {
     public static void main(String[] args) throws IOException, InterruptedException {
 
         displayAppInfo();
+
+        if (java.lang.System.getenv("TULIP_JAVA_OPTIONS") != null) {
+            TULIP_JAVA_OPTIONS = java.lang.System.getenv("TULIP_JAVA_OPTIONS");
+        }
 
         String command = "";
         if (args.length > 0) {
